<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">StoryApp</string>

    <string name="greeting">Hello %1$s,</string>
    <string name="account_created">Your account has been created !</string>
    <string name="cont">Continue</string>
    <string name="yeah">Yeah!</string>
    <string name="register_success">Register Success, Now You Can Login!</string>
    <string name="user_name">user name</string>
    <string name="description">description</string>
    <string name="timestamp">timestamp</string>
    <string name="create_post_text">Create your post today!</string>
    <string name="create_post">Create Post</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="back">Back</string>
    <string name="upload">Upload</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="Logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="password_not_empty">Password cannot be empty </string>
    <string name="email_not_empty">Email cannot be empty </string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="name_not_empty">Name cannot be empty</string>
    <string name="password_more_than_8">Password length must be more than 8</string>
    <string name="map">map</string>
    <string name="retry">Try again</string>
    <string name="upload_loc_info">Upload with location information</string>

</resources>